--- a/public/theme/css/main.css
+++ b/public/theme/css/main.css
@@ -12,8 +12,8 @@
 html,
 body{
     height: 100%;
-    background-color: #50d45a;
-    font-family: 'HindSiliguri', sans-serif;
+    background-color: #1b6eb4;
+    font-family: 'Rubik', sans-serif;
 }
 
 a{
