--- a/public/theme/css/trabalheconosco.css
+++ b/public/theme/css/trabalheconosco.css
@@ -1,38 +1,39 @@
 section.trabalheconosco{
-  background: #50d45a url('../images/buneco.png') no-repeat right center;
-  background-size: 50% auto;
+  background: #1b6eb4 url('../images/recruta.png') no-repeat right center;
+  background-position: 90%;
+  background-size: 35% auto;
   overflow: hidden;
   padding: 100px 0;
 }
 h1.titulo{
-  color: #fff;
+  color: #1b6eb4;
   font-size: 38px;
-  font-weight: 600;
+  font-weight: 800;
   text-align: center;
-  font-style: italic;
   padding-bottom: 16px;
-  text-shadow: 2px 2px 0px #13a855, 3px 3px 0px #1b6eb4;
+  /* text-shadow: 2px 2px 0px #13a855, 3px 3px 0px #1b6eb4; */
 }
 input{
   width: 100%;
-  color: #fff;
+  color: #1b6eb4;
   font-size: .9em;
   display: block;
   padding: 8px 10px;
   background-color: transparent;
   border-radius: 20px;
-  border: 2px solid #fff;
+  border:2px solid #1b6eb4;
   outline: none;
 }
 
 input.file{ display: none }
 label{
-  color: #fff;
+  color: #1b6eb4 !important;
   width: 100%;
   display: block;
-  font-size: 1.1em;
+  font-size: 14px;
+  font-weight: 600 !important;
   text-align: left !important;
-  padding: 4px 12px;
+  padding: 9px 12px;
 }
 label.curriculo{
   text-align: center;
@@ -51,26 +52,27 @@ input::placeholder{
   color: #fff;
 }
 .enviar{
-    color: #307b5b;
+    color: #fff;
     line-height: 1;
-    font-size: 20px;
+    font-size: 16px;
     margin-top: 26px;
-    font-weight: 400;
+    font-weight: 800;
     border-radius: 26px;
-    letter-spacing: 6px;
+    letter-spacing: 2px;
     display: inline-block;
-    padding: 10px 24px 8px;
-    background-color: #fff;
+    padding: 16px 50px 16px;
+    background-color: #ff5a00;
     border: none;
 }
 .box{
   margin-top: 20px;
   display: block;
   text-align: center;
-  background-color: rgba(19, 168, 85, 0.7);
+  background-color: rgba(255, 255, 255, 0.85);
   padding: 40px 20px 60px;
   border-image: url('../images/border.png') 20% round;
   border-top: 5px solid transparent;
+  border-radius: 20px;
 }
 @media (max-width: 767px) {
   section.trabalheconosco{
