--- a/public/theme/fonts/fonts.css
+++ b/public/theme/fonts/fonts.css
@@ -1,30 +1,30 @@
 @font-face {
-  font-family: 'HindSiliguri';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 300;
-  src: url('HindSiliguri/HindSiliguri-Light.ttf');
+  src: url('Rubik/Rubik-Light.ttf');
 }
 @font-face {
-  font-family: 'HindSiliguri';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 400;
-  src: url('HindSiliguri/HindSiliguri-Regular.ttf');
+  src: url('Rubik/Rubik-Regular.ttf');
 }
 @font-face {
-  font-family: 'HindSiliguri';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 500;
-  src: url('HindSiliguri/HindSiliguri-Medium.ttf');
+  src: url('Rubik/Rubik-Medium.ttf');
 }
 @font-face {
-  font-family: 'HindSiliguri';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 600;
-  src: url('HindSiliguri/HindSiliguri-SemiBold.ttf');
+  src: url('Rubik/Rubik-SemiBold.ttf');
 }
 @font-face {
-  font-family: 'HindSiliguri';
+  font-family: 'Rubik';
   font-style: normal;
   font-weight: 700;
-  src: url('HindSiliguri/HindSiliguri-Bold.ttf');
+  src: url('Rubik/Rubik-Bold.ttf');
 }
